--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap" rel="stylesheet">
 
     <!-- Material icon -->
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
 
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -30,16 +29,36 @@
     <script src="./assets/js/home.js" type="module"></script>
 </head>
 <body>
-    <p class="display-large">Typography</p>
-    <p class="display-medium">Typography</p>
-    <p class="display-small">Typography</p>
-    <p class="headline-small">Typography</p>
-    <p class="title-medium">Typography</p>
-    <p class="title-small">Typography</p>
-    <p class="body-large">Typography</p>
-    <p class="body-medium">Typography</p>
-    <p class="label-large">Typography</p>
-    <p class="label-medium">Typography</p>
-    <p class="label-small">Typography</p>
+    <!-- Header -->
+    <header class="header" data-header>
+        <a href="/" class="logo">
+            <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
+            <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
+        </a>
+
+        <nav class="navbar">
+            <ul class="navbar-list">
+                <li>
+                    <a href="/" class="navbar-link title-small has-state active">Home</a>
+                </li>
+                <li>
+                    <a href="./recipes.html" class="navbar-link title-small has-state">Recipes</a>
+                </li>
+            </ul>
+        </nav>
+
+        <button class="icon-btn theme-switch has-state" aria-pressed="false" aria-label="Toggle light and dark theme"
+            data-theme-btn>
+            <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
+
+            <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
+        </button>
+
+        <a href="./saved-recipes.html" class="btn btn-primary has-icon">
+            <span class="material-symbols-outlined" aria-hidden="true">book</span>
+
+            <span class="span">Saved Recipes</span>
+        </a>
+    </header>
 </body>
 </html>
