--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- primary meta tag -->
-    <title>Cook.io - Cooking made easy.</title>
+    <title>Cook.io - Cooking made easy</title>
     <meta name="title" content="Cook.io - Cooking made easy.">
     <meta name="description" content="This is a recipe application made by Rohit Grover">
 
