--- a/index.html
+++ b/index.html
@@ -136,7 +136,43 @@
                     </div>
 
                     <div class="tab-panel" role="tabpanel" id="panel-1" aria-labelledby="tab-1" tabindex="1"
-                        data-tab-panel>Breakfast</div>
+                        data-tab-panel>
+                        <div class="grid-list">
+                            <div class="card skeleton-card">
+                                <div class="skeleton card-banner"></div>
+                                <div class="card-body">
+                                    <div class="skeleton card-title"></div>
+                                    <div class="skeleton card-text"></div>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <figure class="card-media img-holder">
+                                    <img src="./assets/images/recipe.jpg" width="200" height="200" loading="lazy"
+                                        alt="Recipe name" class="img-cover">
+                                </figure>
+
+                                <div class="card-body">
+                                    <h3 class="title-small">
+                                        <a href="./detail.html" class="card-link">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam ducimus eos ipsum qui fugit veritatis, expedita possimus. Dolorum, minus quidem!</a>
+                                    </h3>
+                                    <div class="meta-wrapper">
+                                        <div class="meta-item">
+                                            <span class="material-symbols-outlined" aria-hidden="true">schedule</span>
+                                            <span class="label-medium">2 minutes</span>
+                                        </div>
+
+                                        <button class="icon-btn has-state removed" aria-label="Add to saved recipes">
+                                            <span class="material-symbols-outlined bookmark-add" aria-hidden="true">bookmark_add</span>
+                                            <span class="material-symbols-outlined bookmark" aria-hidden="true">bookmark</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <a href="./recipes.html" class="btn btn-secondary label-large has-state">Show more</a>
+                    </div>
                     <div class="tab-panel" role="tabpanel" id="panel-2" aria-labelledby="tab-2" tabindex="2"
                         data-tab-panel hidden>Lunch</div>
                     <div class="tab-panel" role="tabpanel" id="panel-3" aria-labelledby="tab-3" tabindex="3"
