--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
     <!-- footer -->
     <footer class="footer">
-        <p class="copyright body-medium">Copyright 2023 codewithsadee</p>
+        <p class="copyright body-medium">Copyright 2024 Rohit Grover</p>
         <a href="/" class="logo">
             <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
             <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
